# Wuu

./: .gitattributes  .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  README_zh.md  go.mod  go.sum  install.sh  prompt.md  prompt_followup.md
docs/: AUTOLOOP.md  NEXT.md  PROGRESS.md  proxy-compatibility.md  tui-rendering-stability.md
npm/: install.js  package.json
scripts/: autoloop.ps1  autoloop.sh  codex-header.ps1  codex-smoke.cmd  codex-smoke.ps1  gen-stage2-artifacts.sh  start-autoloop.cmd  wsl-bootstrap-rust.ps1  wsl-bootstrap-rust.sh  wsl-validate.ps1  wsl-validate.sh
selfhost/: compiler.wuu  format.wuu  lexer.wuu  parser.wuu  stdlib.wuu
src/: ast.rs  bytecode.rs  effects.rs  error.rs  evidence.rs  format.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  replay.rs  syntax.rs  typeck.rs  wasm.rs
tests/: bootstrap_tests.rs  bytecode_intrinsics_tests.rs  bytecode_vm_tests.rs  cli_stage1_fmt_tests.rs  cli_stage1_fmt_write_tests.rs  cli_stage1_lex_check_tests.rs  cli_stage1_lex_tests.rs  cli_stage1_parse_tests.rs  effects_tests.rs  evidence_tests.rs  format_tests.rs  golden_parse_tests.rs  host_intrinsics_tests.rs  lexer_golden_tests.rs  lexer_tests.rs  log_tests.rs  parser_tests.rs  replay_tests.rs  run_tests.rs  self_host_subset_tests.rs  selfhost_compiler_vm_tests.rs  selfhost_format_tests.rs  selfhost_lexer_conformance_tests.rs  selfhost_lexer_tests.rs  selfhost_parser_conformance_tests.rs  selfhost_stdlib_tests.rs  selfhost_support.rs  selfhost_vm_tests.rs  stage1_compiler_consistency_tests.rs  stage2_bootstrap_tests.rs  (+3 more)
(+235 files in other folders)
