[package]
name = "wuu"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/blueberrycongee/Wuu"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
serde_cbor = "0.11"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
debug = true
